# DjangoHTMX

./: pyproject.toml
djangohtmx/: db.sqlite3
djangohtmx/djangohtmx/: settings.py  urls.py
djangohtmx/myapp/: admin.py  forms.py  models.py  urls.py  views.py
djangohtmx/myapp/migrations/: 0001_initial.py  0002_karticka_name.py
djangohtmx/myapp/templates/: base.html  index.html  info.html
